force-app/main/default/objects/Stock_Data__c/Stock_Data__c.object-meta.xml
<CustomObject>
    <label>Stock_Data</label>
    <nameField>
        <label>Stock Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock_Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>