force-app/main/default/objects/Stock_Data__c/fields/Close_Price__c.field-meta.xml
<CustomField>
    <fullName>Close_Price__c</fullName>
    <label>Close Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>