force-app/main/default/objects/Stock_Data__c/fields/Market_Cap__c.field-meta.xml
<CustomField>
    <fullName>Market_Cap__c</fullName>
    <label>Market Cap</label>
    <length>20</length>
    <type>Text</type>
</CustomField>