force-app/main/default/objects/Stock_Data__c/fields/Open_Price__c.field-meta.xml
<CustomField>
    <fullName>Open_Price__c</fullName>
    <label>Open Price</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>